additional event tabs urls

--- a/events.html
+++ b/events.html
@@ -215,7 +215,7 @@
     generateOptionsForOrderBy("events");
 
     generateChapterDropdown();
-    setLeftBar();
+    //setLeftBar();
 
 </script>
 
