additional event tabs - chests comparison feature

--- a/eventTabs/june_xxii_/hoops.html
+++ b/eventTabs/june_xxii_/hoops.html
@@ -1,5 +1,6 @@
 <script src="eventTabs/_general/chests/chests_database.js"></script>
 <script src="eventTabs/_general/chests/chests_handler.js"></script>
+<script src="javascript/exception_handler.js"></script>
 
 <h5 class="card-title text-center text-title font-weight-bold">..:: Lucky Little Fin ::..</h5>
 <div class="row">
