jquery load scripts different way

--- a/eventTabs/june_xxii_/hoops.html
+++ b/eventTabs/june_xxii_/hoops.html
@@ -1,3 +1,5 @@
+<div id="main">
+
 <h5 class="card-title text-center text-title font-weight-bold">..:: Lucky Little Fin ::..</h5>
 <div class="row">
     <div class="col-sm">
@@ -11,7 +13,7 @@
     </div>
 </div>
 
-
+</div>
 <!--<div style="text-align: center">
                     <div class="bbTable">
                         <table class="table-primary" style="width: 100%">
@@ -40,3 +42,483 @@
                         </table>
                     </div>
                 </div>-->
+
+<script>
+var currencies = {
+    "june_xxii_": {
+        "ec": "https://i.ibb.co/W0SsWfj/EL-akcia-j-l-2021-currency1.png",
+        "ep": "https://i.ibb.co/DbMvM6K/EL-akcia-j-l-2021-payback.png"
+    }
+}
+
+var chests = {
+    "june_xxii_": [
+        {
+            "img": "https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 5,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 12,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "30"
+              },
+              {
+                "percentage": 23,
+                "type": "runeShard",
+                "subType": "random",
+                "amount": "1"
+              },
+              {
+                "percentage": 25,
+                "type": "item",
+                "subType": "INS_RF_CN_5",
+                "amount": "1"
+              },
+              {
+                "percentage": 35,
+                "type": "flexible_reward",
+                "subType": "frog_seeds",
+                "amount": "6"
+              }
+            ],
+            "id": "reward_pool_event_chest_a_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/2yZV9Wj/EL-stranka-scroll-aquatic-chest2.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 6,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 16,
+                "type": "item",
+                "subType": "INS_RF_CN_15",
+                "amount": "1"
+              },
+              {
+                "percentage": 22,
+                "type": "good",
+                "subType": "spell_knowledge_boost_1",
+                "amount": "1"
+              },
+              {
+                "percentage": 28,
+                "type": "flexible_reward",
+                "subType": "frog_barracks_HM",
+                "amount": "6"
+              },
+              {
+                "percentage": 28,
+                "type": "flexible_reward",
+                "subType": "frog_barracks_HR",
+                "amount": "6"
+              }
+            ],
+            "id": "reward_pool_event_chest_b_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/Wg5MjRV/EL-stranka-scroll-aquatic-chest3.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 11,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 11,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "40"
+              },
+              {
+                "percentage": 19,
+                "type": "item",
+                "subType": "INS_KP_AW_5",
+                "amount": "1"
+              },
+              {
+                "percentage": 22,
+                "type": "good",
+                "subType": "knowledge_points",
+                "amount": "3"
+              },
+              {
+                "percentage": 37,
+                "type": "flexible_reward",
+                "subType": "frog_mana",
+                "amount": "6"
+              }
+            ],
+            "id": "reward_pool_event_chest_c_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/WgLLt35/EL-stranka-scroll-aquatic-chest4.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 8,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 12,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "50"
+              },
+              {
+                "percentage": 36,
+                "type": "item",
+                "subType": "INS_KP_AW_3",
+                "amount": "1"
+              },
+              {
+                "percentage": 44,
+                "type": "good",
+                "subType": "knowledge_points",
+                "amount": "2"
+              }
+            ],
+            "id": "reward_pool_event_chest_d_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 13,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 17,
+                "type": "item",
+                "subType": "INS_RF_SPL_33",
+                "amount": "2"
+              },
+              {
+                "percentage": 23,
+                "type": "flexible_reward",
+                "subType": "frog_sentient_q_1_plus_1",
+                "amount": "9"
+              },
+              {
+                "percentage": 23,
+                "type": "flexible_reward",
+                "subType": "frog_barracks_HR",
+                "amount": "9"
+              },
+              {
+                "percentage": 24,
+                "type": "flexible_reward",
+                "subType": "frog_barracks_LM",
+                "amount": "9"
+              }
+            ],
+            "id": "reward_pool_event_chest_e_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/Phn0k6y/EL-stranka-scroll-aquatic-chest6.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 12,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 13,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "80"
+              },
+              {
+                "percentage": 22,
+                "type": "good",
+                "subType": "knowledge_points",
+                "amount": "11"
+              },
+              {
+                "percentage": 25,
+                "type": "good",
+                "subType": "spell_good_production_boost_1",
+                "amount": "1"
+              },
+              {
+                "percentage": 28,
+                "type": "flexible_reward",
+                "subType": "frog_barracks_MA",
+                "amount": "9"
+              }
+            ],
+            "id": "reward_pool_event_chest_f_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/ctJJCXd/EL-stranka-scroll-aquatic-chest7.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 9,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "120"
+              },
+              {
+                "percentage": 15,
+                "type": "item",
+                "subType": "INS_KP_AW_10",
+                "amount": "2"
+              },
+              {
+                "percentage": 19,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 22,
+                "type": "item",
+                "subType": "INS_RF_CN_15",
+                "amount": "1"
+              },
+              {
+                "percentage": 35,
+                "type": "flexible_reward",
+                "subType": "frog_standard_q_2_plus_2",
+                "amount": "9"
+              }
+            ],
+            "id": "reward_pool_event_chest_g_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/KmqZxpL/EL-stranka-scroll-aquatic-chest8.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 6,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "150"
+              },
+              {
+                "percentage": 19,
+                "type": "item",
+                "subType": "INS_KP_AW_15",
+                "amount": "2"
+              },
+              {
+                "percentage": 23,
+                "type": "item",
+                "subType": "INS_RF_SPL_25",
+                "amount": "1"
+              },
+              {
+                "percentage": 24,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 28,
+                "type": "flexible_reward",
+                "subType": "frog_barracks_LR",
+                "amount": "12"
+              }
+            ],
+            "id": "reward_pool_event_chest_h_scroll_aquatic"
+          },
+          {
+            "img": "https://i.ibb.co/Wn8Q2DC/EL-stranka-scroll-aquatic-chest9.png",
+            "ec": 20,
+            "ep": 3,
+            "chances": [
+              {
+                "percentage": 6,
+                "type": "good",
+                "subType": "event_currency_1",
+                "amount": "200"
+              },
+              {
+                "percentage": 18,
+                "type": "item",
+                "subType": "INS_KP_AW_20",
+                "amount": "1"
+              },
+              {
+                "percentage": 21,
+                "type": "episodic",
+                "subType": "daily_reward_event_chest_scroll_aquatic",
+                "amount": "1"
+              },
+              {
+                "percentage": 25,
+                "type": "good",
+                "subType": "knowledge_points",
+                "amount": "10"
+              },
+              {
+                "percentage": 30,
+                "type": "flexible_reward",
+                "subType": "frog_seeds",
+                "amount": "12"
+              }
+            ],
+            "id": "reward_pool_event_chest_i_scroll_aquatic"
+          },
+    ]
+}
+
+    generateChests();
+
+if (typeof rewardMultiplicator === "undefined") {
+    var rewardMultiplicator = 1;
+}
+
+function generateChests() {
+    var selectedEvent = getSelectedEvent();
+    var chestsData = getChestsData(selectedEvent);
+    draw(chestsData);
+
+}
+
+function getChestsData(selectedEvent) {
+    return chests[selectedEvent];
+}
+
+function draw(chestsData) {
+    let divCenter = document.createElement("div");
+    divCenter.style.textAlign = "center";
+    let divBBTable = document.createElement("div");
+    divBBTable.className = "bbTable";
+
+    for (let i = 0; i < chestsData.length; i++) {
+
+      let table = document.createElement("table");
+      table.className = "table-primary";
+      table.style.width = "100%";
+      table.style.marginBottom = "10px";
+      let tbody = document.createElement("tbody");
+      
+      for (let r = 1; r <= 3; r++) {
+
+          let tr = document.createElement("tr");
+
+          if (r === 1) {
+
+              let td1 = document.createElement("td");
+              td1.rowSpan = "3";
+              td1.style.width = "30%";
+              let img = document.createElement("img");
+              img.src = chestsData[i]["img"];
+              td1.appendChild(img);
+              tr.appendChild(td1);
+
+              let td2 = document.createElement("td");
+              td2.innerHTML = chestsData[i]["ec"]+` <img src="`+currencies[getSelectedEvent()]["ec"]+`">`;
+              td2.style.width = 70/chestsData[i]["chances"].length+"%";
+              tr.appendChild(td2);
+
+              let td3 = document.createElement("td");
+              td3.innerHTML = chestsData[i]["ep"]+` <img src="`+currencies[getSelectedEvent()]["ep"]+`">`;
+              td3.style.width = 70/chestsData[i]["chances"].length+"%";
+              tr.appendChild(td3);
+
+              let td4 = document.createElement("td");
+              td4.colSpan = chestsData[i]["chances"].length-2;
+              tr.appendChild(td4);
+
+          } else if (r === 2) {
+
+              for (let d = 0; d < chestsData[i]["chances"].length; d++) {
+                  
+                  let th = document.createElement("th");
+                  th.innerHTML = chestsData[i]["chances"][d]["percentage"]+"%";
+                  th.style.width = 70/chestsData[i]["chances"].length+"%";
+                  tr.appendChild(th);
+
+              }
+
+          } else {
+
+              for (let d = 0; d < chestsData[i]["chances"].length; d++) {
+
+                  let td = document.createElement("td");
+                  $.getScript('database/flexibleRewards.js', function() {
+                      let reward = getReward(chestsData, i, d);
+                      td.innerHTML = (rewardMultiplicator*getAmount(chestsData, i, d))+"x "+reward;
+                      rewardMultiplicator = 1;
+                      td.style.width = 70/chestsData[i]["chances"].length+"%";
+                      tr.appendChild(td);
+                  });
+
+              }
+
+          }
+
+          tbody.appendChild(tr);
+      }
+
+      table.appendChild(tbody);
+      divBBTable.appendChild(table);
+    }
+    divCenter.appendChild(divBBTable);
+    document.getElementById("column_with_tables").appendChild(divCenter);
+}
+
+function getAmount(chestsData, chest, chance) {
+    return chestsData[chest]["chances"][chance]["amount"];
+}
+
+function getReward(chestsData, chest, chance) {
+    if (chestsData[chest]["chances"][chance]["subType"].startsWith("daily_reward")) {
+        return goods_icons["daily_reward"];
+    }
+    if (chestsData[chest]["chances"][chance]["subType"] === "event_currency_1") {
+        return `<img src="`+currencies[getSelectedEvent()]["ec"]+`">`;
+    }
+    if (chestsData[chest]["chances"][chance]["type"] === "runeShard") {
+        return goods_icons["rune_shard"];
+    }
+    if (chestsData[chest]["chances"][chance]["type"] === "item" || chestsData[chest]["chances"][chance]["type"] === "good") {
+        if (goods_icons[chestsData[chest]["chances"][chance]["subType"]] !== undefined) {
+            return goods_icons[chestsData[chest]["chances"][chance]["subType"]].replaceAll("<br>","");
+        } else if (goods_icons[chestsData[chest]["chances"][chance]["subType"].toLowerCase()] !== undefined) {
+          return goods_icons[chestsData[chest]["chances"][chance]["subType"].toLowerCase()].replaceAll("<br>","");
+        } else {
+            return "MISSING!!!"
+        }
+    }
+    if (chestsData[chest]["chances"][chance]["type"] === "flexible_reward") {
+        for (let fr = 0; fr < flexibleRewards.length; fr++) {
+            if (flexibleRewards[fr]["id"] === chestsData[chest]["chances"][chance]["subType"]) {
+                rewardMultiplicator = flexibleRewards[fr]["rewards"][localStorage.getItem("chapter")-1]["amount"];
+                return goods_icons[flexibleRewards[fr]["rewards"][localStorage.getItem("chapter")-1]["subType"]];
+            }
+        }
+    }
+}
+</script>
