--- a/eventTabs/june_xxii_/hoops.html
+++ b/eventTabs/june_xxii_/hoops.html
@@ -1,19 +1,51 @@
 <div id="main">
 
-<h5 class="card-title text-center text-title font-weight-bold">..:: Lucky Little Fin ::..</h5>
-<div class="row">
+  <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Lucky Little Fin ::..<br></h5>
+  <img id="event_banner" src="https://i.ibb.co/F33YbJG/EL-akcia-m-j-2022-banner.png" alt="undefined" class="center " style="margin-bottom: 15px; width: 50%;">
+
+  <div class="container">
+    <div class="card-spoiler border-spoiler mb-3">
+        <div class="card-header" id="headingOne">
+            <h2 class="mb-0">
+              <center><button class="btn btn-spoiler btn-smbtn-danger " data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                  <h7>Feature Introduction</h7>
+              </button></center>
+            </h2>
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
+              <div class="card-body">
+                Hello! My name is iDavis and for this event I'm trying a brand new feature on my website - <b>the chests comparator!</b><br><br>
+                Below, you can see all the available chests (or as they are called this time - hoops) during the Lucky Little Fin event including all their prices, chances and rewards.
+                The values are - as always on this website - automatically generated from the game, so it ensures quick updates in case anything in the game gets changed.<br><br>
+                At the same time I'm also introducing new sorting feature, which can be used to sort these chests to help
+                you find the bests chests for obtaining either Grand Prizes or Daily Prizes of this event!
+                The values of chests' rewards work together with the chapter system on this website, so make sure 
+                that your selected chapter (in the right top corner) is correct! The rewards in these chests vary from chapter to chapter
+                so make sure you set this up in order to see proper rewards for your current ingame progress!<br><br>
+                I will keep repeating this feature in future events and it will
+                always appear as an additional tab within the left panel of this site (next to Calendar and Quests). I have ideas for
+                even more additional tabs, so stay tuned!<br><br>
+                For more information about how this feature works, check out my latest video. If you have any questions, feel free
+                to use its comment section and I will be more than happy to answer. :)<br>
+              </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-sm">
-        <center><label for="order_chests" id="order_chests" style="margin-bottom: 20px;">Sort chests:</label>
-            <select id="order_chests" class="custom-select" style="width: 50%;">
+        <center><label for="order_chests" id="order_chests" style="margin-bottom: 35px; margin-top: 15px;">Order By:</label>
+            <select id="order_chests" class="custom-select" style="width: 50%;" onchange="sort(this.value);">
                 <option value="none">Default</option>
                 <option value="dp">Best Chests for Daily Prizes</option>
                 <option value="gp">Best Chests for Grand Prizes</option>
             </select>
         </center>
     </div>
-</div>
+  </div>
 
 </div>
+
 <!--<div style="text-align: center">
                     <div class="bbTable">
                         <table class="table-primary" style="width: 100%">
@@ -55,8 +87,8 @@ var chests = {
     "june_xxii_": [
         {
             "img": "https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png",
-            "ec": 20,
-            "ep": 3,
+            "ec": 21,
+            "ep": 1,
             "chances": [
               {
                 "percentage": 5,
@@ -93,8 +125,8 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/2yZV9Wj/EL-stranka-scroll-aquatic-chest2.png",
-            "ec": 20,
-            "ep": 3,
+            "ec": 26,
+            "ep": 1,
             "chances": [
               {
                 "percentage": 6,
@@ -131,8 +163,8 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/Wg5MjRV/EL-stranka-scroll-aquatic-chest3.png",
-            "ec": 20,
-            "ep": 3,
+            "ec": 32,
+            "ep": 1,
             "chances": [
               {
                 "percentage": 11,
@@ -169,8 +201,8 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/WgLLt35/EL-stranka-scroll-aquatic-chest4.png",
-            "ec": 20,
-            "ep": 3,
+            "ec": 46,
+            "ep": 2,
             "chances": [
               {
                 "percentage": 8,
@@ -201,8 +233,8 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/brNyw5S/EL-stranka-scroll-aquatic-chest5.png",
-            "ec": 20,
-            "ep": 3,
+            "ec": 49,
+            "ep": 2,
             "chances": [
               {
                 "percentage": 13,
@@ -239,8 +271,8 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/Phn0k6y/EL-stranka-scroll-aquatic-chest6.png",
-            "ec": 20,
-            "ep": 3,
+            "ec": 64,
+            "ep": 2,
             "chances": [
               {
                 "percentage": 12,
@@ -277,7 +309,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/ctJJCXd/EL-stranka-scroll-aquatic-chest7.png",
-            "ec": 20,
+            "ec": 79,
             "ep": 3,
             "chances": [
               {
@@ -315,7 +347,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/KmqZxpL/EL-stranka-scroll-aquatic-chest8.png",
-            "ec": 20,
+            "ec": 81,
             "ep": 3,
             "chances": [
               {
@@ -353,7 +385,7 @@ var chests = {
           },
           {
             "img": "https://i.ibb.co/Wn8Q2DC/EL-stranka-scroll-aquatic-chest9.png",
-            "ec": 20,
+            "ec": 89,
             "ep": 3,
             "chances": [
               {
@@ -409,8 +441,12 @@ function getChestsData(selectedEvent) {
     return chests[selectedEvent];
 }
 
-function draw(chestsData) {
+function draw(chestsData, sort="") {
+    if (document.getElementById("div_chests") !== null) {
+        document.getElementById("div_chests").remove();
+    }
     let divCenter = document.createElement("div");
+    divCenter.id = "div_chests";
     divCenter.style.textAlign = "center";
     let divBBTable = document.createElement("div");
     divBBTable.className = "bbTable";
@@ -449,6 +485,13 @@ function draw(chestsData) {
 
               let td4 = document.createElement("td");
               td4.colSpan = chestsData[i]["chances"].length-2;
+              if (sort === "dp") {
+                  td4.innerHTML = `<h7><i>`+(100/chestsData[i]["chances"].filter(chance => chance["subType"].startsWith("daily_reward"))[0]["percentage"]*chestsData[i]["ec"]).toFixed(1)
+                  +` <img src='${currencies[getSelectedEvent()]["ec"]}'> per Daily Prize`+`</i></h7>`;
+              } else if (sort === "gp") {
+                  td4.innerHTML = `<h7><i>`+(20/chestsData[i]["ep"]*chestsData[i]["ec"]).toFixed(1)
+                  +` <img src='${currencies[getSelectedEvent()]["ec"]}'> per Grand Prize`+`</i></h7>`;
+              }
               tr.appendChild(td4);
 
           } else if (r === 2) {
@@ -519,6 +562,23 @@ function getReward(chestsData, chest, chance) {
                 return goods_icons[flexibleRewards[fr]["rewards"][localStorage.getItem("chapter")-1]["subType"]];
             }
         }
+    }
+}
+
+function sort(value) {
+    var chestsData = getChestsData(getSelectedEvent()).slice();
+    if (value === "none") {
+        draw(chestsData);
+    }
+    else if (value === "dp") {
+        //SORT BY DAILY PRIZES
+        chestsData.sort((a,b) => (100/a["chances"].filter(chance => chance["subType"].startsWith("daily_reward"))[0]["percentage"]*a["ec"] >
+        (100/b["chances"].filter(chance => chance["subType"].startsWith("daily_reward"))[0]["percentage"]*b["ec"])) ? 1 : -1);
+        draw(chestsData, value);
+    } else if (value === "gp") {
+        //SORT BY GRAND PRIZES
+        chestsData.sort((a,b) => (20/a["ep"]*a["ec"] > 20/b["ep"]*b["ec"]) ? 1 : -1);
+        draw(chestsData, value);
     }
 }
 </script>
