--- a/eventTabs/june_xxii_/hoops.html
+++ b/eventTabs/june_xxii_/hoops.html
@@ -8,13 +8,13 @@
         <div class="card-header" id="headingOne">
             <h2 class="mb-0">
               <center><button class="btn btn-spoiler btn-smbtn-danger " data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                  <h7>Feature Introduction</h7>
+                  <h7><img src="https://i.ibb.co/DbMvM6K/EL-akcia-j-l-2021-payback.png" width="27px;"> Feature Introduction</h7>
               </button></center>
             </h2>
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
               <div class="card-body">
                 Hello! My name is iDavis and for this event I'm trying a brand new feature on my website - <b>the chests comparator!</b><br><br>
-                Below, you can see all the available chests (or as they are called this time - hoops) during the Lucky Little Fin event including all their prices, chances and rewards.
+                Below, you can see all the available chests (or as they are called this time - hoops) during the Lucky Little Fin event including all their prices, chances and rewards!
                 The values are - as always on this website - automatically generated from the game, so it ensures quick updates in case anything in the game gets changed.<br><br>
                 At the same time I'm also introducing new sorting feature, which can be used to sort these chests to help
                 you find the bests chests for obtaining either Grand Prizes or Daily Prizes of this event!
@@ -23,14 +23,17 @@
                 so make sure you set this up in order to see proper rewards for your current ingame progress!<br><br>
                 I will keep repeating this feature in future events and it will
                 always appear as an additional tab within the left panel of this site (next to Calendar and Quests). I have ideas for
-                even more additional tabs, so stay tuned!<br><br>
-                For more information about how this feature works, check out my latest video. If you have any questions, feel free
+                even more such additional tabs, so stay tuned! :)<br><br>
+                For more information about how this feature works, check out my latest video below. If you have any questions, feel free
                 to use its comment section and I will be more than happy to answer. :)<br>
               </div>
           </div>
         </div>
     </div>
   </div>
+
+  <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Hoops Overview ::..<br></h5>
+  <img id="event_banner" src="https://i.ibb.co/fqXfxk1/EL-stranka-scroll-aquatic-all-chests.png" alt="undefined" class="center " style="margin-bottom: 15px;">
 
   <div class="row">
     <div class="col-sm">
