chests sorting feature wrong order fix

--- a/events.html
+++ b/events.html
@@ -49,6 +49,7 @@
     <script src="database/languages/quests_translationsHandler.js"></script>
     <script src="database/languages/quests_translationsDictionary.js"></script>
     <script src="database/languages/quests_headers.js"></script>
+    <script src="database/flexibleRewards.js"></script>
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
