--- a/eventTabs/june_xxii_/hoops.html
+++ b/eventTabs/june_xxii_/hoops.html
@@ -13,7 +13,7 @@
             <div id="collapseOne" class="collapse" aria-labelledby="headingOne">
               <div class="card-body">
                 Hello! My name is iDavis and for this event I'm trying a brand new feature on my website - the <b>Chests Comparator</b>!<br><br>
-                You can see all the available chests below (or as they are called this time - hoops <img src="https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png" width="20px;">) during the <b>Lucky Little Fin</b> event including all their prices, chances and rewards!
+                You can see all the available chests (or as they are called this time - hoops <img src="https://i.ibb.co/frWgY04/EL-stranka-scroll-aquatic-chest1.png" width="20px;">) during the <b>Lucky Little Fin</b> event below including all their prices, chances and rewards!
                 The values are - as always on my website - automatically generated from the game, so it ensures quick updates if anything in the game gets changed.<br><br>
                 At the same time I'm also introducing new sorting feature, which can be used to sort these chests to help
                 you find the bests chests for obtaining either Grand Prizes or Daily Prizes of this event!
@@ -495,16 +495,13 @@ function draw(chestsData, sort="") {
               for (let d = 0; d < maxRewards; d++) {
 
                   let td = document.createElement("td");
-                  $.getScript('database/flexibleRewards.js', function() {  //zrejme kvoli tomuto loadovaniu sa furt prehadzuje to poradie
-                      if (d < chestsData[i]["chances"].length) {
-                          let reward = getReward(chestsData, i, d);
-                          td.innerHTML = (rewardMultiplicator*getAmount(chestsData, i, d))+"x "+reward;
-                      }
-                      rewardMultiplicator = 1;
-                      td.style.width = 70/maxRewards+"%";
-                      tr.appendChild(td);
-                  });
-
+                  if (d < chestsData[i]["chances"].length) {
+                      let reward = getReward(chestsData, i, d);
+                      td.innerHTML = (rewardMultiplicator*getAmount(chestsData, i, d))+"x "+reward;
+                  }
+                  rewardMultiplicator = 1;
+                  td.style.width = 70/maxRewards+"%";
+                  tr.appendChild(td);
               }
 
           }
