chest sorting feature intro video placeholder

--- a/eventTabs/june_xxii_/hoops.html
+++ b/eventTabs/june_xxii_/hoops.html
@@ -24,7 +24,10 @@
                 always appear as an additional tab within the left panel of this site (next to Calendar and Quests). I have ideas for
                 even more such additional tabs, so stay tuned! :)<br><br>
                 For more information about how this feature works, check out my latest video below. If you have any questions, feel free
-                to use its comment section and I will be more than happy to answer. :)<br>
+                to use its comment section and I will be more than happy to answer. :)<br><br>
+                <center>
+                  <iframe allowfullscreen="true" src="https://www.youtube.com/embed/?" style="width: 560px; height: 315.2px;"></iframe>
+                </center>
               </div>
           </div>
         </div>
